--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,6 +1,8 @@
-
+@fa-font-path: "/bower_components/font-awesome/fonts";
+@import "../bower_components/font-awesome/less/font-awesome.less";
 // Core variables and mixins
 @import "../bower_components/bootstrap/less/variables.less";
+@icon-font-path:          "../fonts/bootstrap/";
 @jumbotron-bg:                   #000;
 @font-family-base: "Helvetica Neue";
 @headings-font-family:    inherit;
@@ -93,7 +95,20 @@ a:hover {
   font-size: 50px;
   margin: 50px;
   padding: 20px 35px;
-  background-color: rgba(255,255,255,0.25);
+  color: #aaa;
+  background-color: transparent;
+  &.active:focus, &:active:focus, &:focus {
+    outline: none;
+    color: #999;
+  }
+
+  &:focus {
+    color: #aaa;
+  }
+
+  &:hover {
+    color: #777;
+  }
 }
 
 //
