[del] video [add] scroll

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -103,6 +103,20 @@ a:hover {
   }
 }
 
+a.media-content-link {
+  margin-top: 150px;
+  margin-bottom: 100px;
+  display: block;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+blockquote p.lead {
+  font-weight: 100;
+}
+
 .btn-video-play, .btn-play {
   &.active:focus, &:active:focus, &:focus {
     outline: none;
