--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -104,9 +104,12 @@ a:hover {
 }
 
 a.media-content-link {
-  margin-top: 150px;
-  margin-bottom: 100px;
+  margin-top: 50px;
+  margin-bottom: 25px;
   display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 
   &:hover {
     text-decoration: none;
@@ -114,8 +117,10 @@ a.media-content-link {
 }
 
 blockquote p.lead {
-  font-weight: 100;
+  // font-weight: 100;
 }
+
+.angular-google-map-container { height: 400px; }
 
 .btn-video-play, .btn-play {
   &.active:focus, &:active:focus, &:focus {
@@ -216,6 +221,10 @@ body {
   left: 0;
   padding-bottom: 0;
 
+}
+
+.media-content-image {
+  max-width: 100%;
 }
 
 .carousel-caption h3 {
