--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,6 +1,6 @@
 <div ng-controller="PlacesCtrl" class="page-wrapper">
-    <slick class="" infinite=false arrows=false>
-        <div ng-repeat="slide in slides" active="slide.active" >
+    <slick class="" infinite=false arrows=false on-after-change="onAfterChange">
+        <div ng-repeat="slide in slides" active="slide.active">
             <div class="content-slide">
 
 
@@ -47,6 +47,12 @@
                 <div id="media-content-{{$index}}" ng-if="slide.video" fit-vids>
                   <iframe id="ytplayer" width="1280" height="800" type="text/html" src="http://www.youtube.com/embed/PFVcfyqm9_Y?modestbranding=1&rel=0&controls=0&autoplay=0&playsinline=1&showinfo=0&origin=http://example.com" frameborder="0" allowfullscreen/>
                 </div>
+                <div class="maps-wrapper" ng-if="slide.maps" fit-vids custom-selector="google-map" ng-controller="MapCtrl">
+                  <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m29!1m12!1m3!1d1213.5841912603892!2d13.40105350178898!3d52.530387583271406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m14!1i0!3e2!4m5!1s0x47a851e51ffe4c8f%3A0x81d84dd51899d817!2sBrunnenstra%C3%9Fe+11%2C+10119+Berlin%2C+Germany!3m2!1d52.5313641!2d13.400299799999999!4m5!1s0x47a851e4644a4b75%3A0xf49417256487121c!2sGastst%C3%A4tte+St.+Oberholz%2C+Rosenthaler+Stra%C3%9Fe+72a%2C+10119+Berlin%2C+Germany!3m2!1d52.529512!2d13.401764!5e0!3m2!1sen!2s!4v1402598598218" width="1136" height="600" frameborder="0" style="border:0"></iframe> -->
+                  <google-map center="map.center" zoom="map.zoom">
+                  <layer type="KmlLayer" options="kmlLayerOptions" ></layer>
+                  </google-map>
+                </div>
                 <!-- <bnw-video-player index="$index" ng-if="slide.video" id="media-content-{{$index}}"> -->
 
                  <!--    <button class="btn-video-play">
@@ -70,12 +76,7 @@
                     <!-- <iframe id="ytplayer" width="1280" height="800" type="text/html" src="http://www.youtube.com/embed/PFVcfyqm9_Y?modestbranding=1&rel=0&controls=0&autoplay=0&playsinline=1&showinfo=0&origin=http://example.com" frameborder="0" allowfullscreen/>
               </div> -->
                 <!-- </bnw-video-player> -->
-                <div class="maps-wrapper" ng-if="slide.maps" fit-vids custom-selector="google-map" ng-controller="MapCtrl">
-                  <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m29!1m12!1m3!1d1213.5841912603892!2d13.40105350178898!3d52.530387583271406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m14!1i0!3e2!4m5!1s0x47a851e51ffe4c8f%3A0x81d84dd51899d817!2sBrunnenstra%C3%9Fe+11%2C+10119+Berlin%2C+Germany!3m2!1d52.5313641!2d13.400299799999999!4m5!1s0x47a851e4644a4b75%3A0xf49417256487121c!2sGastst%C3%A4tte+St.+Oberholz%2C+Rosenthaler+Stra%C3%9Fe+72a%2C+10119+Berlin%2C+Germany!3m2!1d52.529512!2d13.401764!5e0!3m2!1sen!2s!4v1402598598218" width="1136" height="600" frameborder="0" style="border:0"></iframe> -->
-                  <google-map center="map.center" zoom="map.zoom">
-                  <layer type="KmlLayer" options="kmlLayerOptions" ></layer>
-                  </google-map>
-                </div>
+
 
             </div>
         </div>
