[++] fix on after change

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 <div ng-controller="PlacesCtrl" class="page-wrapper">
-    <slick class="" infinite=false arrows=false on-after-change="onAfterChange">
+    <slick class="" infinite=false arrows=false>
         <div ng-repeat="slide in slides" active="slide.active">
             <div class="content-slide">
 
