--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -103,6 +103,11 @@ a:hover {
   }
 }
 
+.back-to-slides {
+  display: block;
+  margin: 35px;
+}
+
 a.media-content-link {
   margin-top: 50px;
   margin-bottom: 25px;
