--- a/app/views/kaffee-kochen.html
+++ b/app/views/kaffee-kochen.html
@@ -1,4 +1,4 @@
 <a href="/?slide=kaffee-kochen-quote" class="back-to-slides"><span class="glyphicon glyphicon-chevron-up"></span></a>
-<div fit-vids >
+<div fit-vids us-spinner="{color: '#fff', top: '41%'}" spinner-key="spinner-1" spinner-start-active="1">
     <iframe id="ytplayer" width="1280" height="800" type="text/html" src="http://www.youtube.com/embed/PFVcfyqm9_Y?modestbranding=1&rel=0&controls=0&autoplay=0&playsinline=0&showinfo=0&origin=http://example.com" frameborder="0" allowfullscreen></iframe>
 </div>
