--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,9 @@
-<div ng-controller="PlacesCtrl" class="page-wrapper">
-    <slick class="" speed="{{carousel.speed}}" css-ease="{{carousel.cssEase}}" infinite=false arrows=false current-index="currentSlide" on-after-change="{{carousel.onAfterChange()}}" on-before-change="{{carousel.onBeforeChange()}}">
+<div ng-controller="PlacesCtrl" class="page-wrapper" ng-cloak>
+    <bnw-slick draggable=false class="bnw-carousel" speed="{{carousel.speed}}" css-ease="{{carousel.cssEase}}" infinite=false arrows=false on-after-change="carousel.onAfterChange()" on-before-change="carousel.onBeforeChange()" current-index="currentSlide">
+
         <div ng-repeat="slide in slides" active="slide.active">
-            <div class="content-slide">
+            <div class="content-slide" du-scroll-container>
+                <a id="slide-scroll-top-{{$index}}"></a>
 
 
                 <div class="carousel-caption" ng-if="slide.caption">
@@ -14,7 +16,7 @@
                         <br>WORK</h1>
                 </div>
 
-                <a href="{{slide.url | mediaUrl:$index }}" ng-if="slide.quote" class="media-content-link" ng-controller="PlaceCtrl">
+                <media-link url="slide.url" index="$index" ng-if="slide.quote">
                     <blockquote>
                         <p class="lead">
                             {{slide.quote}}
@@ -23,12 +25,12 @@
                     <p>
                         <span class="glyphicon glyphicon-chevron-down"></span>
                     </p>
-                </a>
+                </media-link>
 
                 <div class="audio-wrapper" ng-if="slide.audio" ng-controller="AudioCtrl">
                     <iframe id="sc-widget" class="hide" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153552958%3Fsecret_token%3Ds-mjI3O&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false" width="100%" height="465" scrolling="no" frameborder="no"></iframe>
                     <audio>
-                        <source src="/audio/01-stoberholz.mp3">
+                        <source src="{{slide.audio}}">
                     </audio>
                     <button type="button" class="btn btn-play btn-lg" ng-model="playing" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
                         <span class="glyphicon glyphicon-play" ng-hide="playing"></span>
@@ -46,6 +48,7 @@
                   <layer type="KmlLayer" options="kmlLayerOptions" ></layer>
                   </google-map>
                 </div>
+                <a href="#slide-scroll-top-{{$index}}" du-scrollspy><span class="glyphicon glyphicon-chevron-up"></span></a>
                 <!-- <bnw-video-player index="$index" ng-if="slide.video" id="media-content-{{$index}}"> -->
 
                  <!--    <button class="btn-video-play">
