--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,6 @@
 <div ng-controller="PlacesCtrl" class="page-wrapper" ng-cloak>
+    <audio media-player="audioPlayer" data-playlist="audioPlaylist">
+    </audio>
     <bnw-slick draggable=false class="bnw-carousel" speed="{{carousel.speed}}" css-ease="{{carousel.cssEase}}" infinite=false arrows=false on-after-change="carousel.onAfterChange()" on-before-change="carousel.onBeforeChange()" current-index="currentSlide">
 
         <div ng-repeat="slide in slides" active="slide.active">
@@ -29,12 +31,10 @@
 
                 <div class="audio-wrapper" ng-if="slide.audio" ng-controller="AudioCtrl" ng-hide="{{!!slide.maps}}">
                    <!--  <iframe id="sc-widget" class="hide" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153552958%3Fsecret_token%3Ds-mjI3O&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false" width="100%" height="465" scrolling="no" frameborder="no"></iframe> -->
-                    <audio>
-                        <source ng-src="{{slide.audio}}">
-                    </audio>
+
                     <button type="button" class="btn btn-play btn-lg" ng-model="playing" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
-                        <span class="glyphicon glyphicon-play" ng-hide="playing"></span>
-                        <span class="glyphicon glyphicon-pause" ng-show="playing"></span>
+                        <span class="glyphicon glyphicon-play" ng-hide="audioPlayer.playing"></span>
+                        <span class="glyphicon glyphicon-pause" ng-show="audioPlayer.playing"></span>
                     </button>
                 </div>
 
