--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -20,6 +20,10 @@
   text-transform: uppercase;
 }
 
+.slide-marker {
+  // display: block;
+}
+
 @import "../bower_components/bootstrap/less/mixins.less";
 
 
@@ -82,6 +86,16 @@ a:hover {
   color: #fff;
 }
 
+bnw-scroll {
+  display: block;
+  // min-height: 1000px;
+  margin-bottom: 15em;
+}
+
+.jumbotron {
+
+  // user-select: none;
+}
 .spinner {
   background: url(../images/ajax-loader.gif) no-repeat top left;
   width: 66px;
@@ -289,7 +303,7 @@ body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
-  box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  // box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 
 // Extra markup and styles for table-esque vertical and horizontal centering
