--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,57 +1,52 @@
 <div ng-controller="PlacesCtrl" class="page-wrapper" ng-cloak>
-    <audio media-player="audioPlayer" data-playlist="audioPlaylist">
-    </audio>
-    <bnw-slick draggable=false class="bnw-carousel" speed="{{carousel.speed}}" css-ease="{{carousel.cssEase}}" infinite=false arrows=false on-after-change="carousel.onAfterChange()" on-before-change="carousel.onBeforeChange()" current-index="currentSlide">
-
-        <div ng-repeat="slide in slides" active="slide.active">
-            <bnw-scroll index="$index">
-                <div class="content-slide" du-scroll-container>
-                    <!-- <a id="slide-scroll-top-{{$index}}"></a> -->
+    <div ng-repeat="slide in slides">
+        <bnw-scroll slide-id="slide.id">
+            <div class="content-slide">
+                <a id="slide-scroll-top-{{$index}}" data-slide-id="{{slide.id}}" class="slide-marker"></a>
 
 
-                    <div class="carousel-caption" ng-if="slide.caption">
-                        <h6 class="slide-title">{{slide.caption}}</h3>
-                    </div>
+                <div class="carousel-caption" ng-if="slide.caption">
+                    <h6 class="slide-title">{{slide.caption}}</h3>
+                </div>
 
-                    <div class="jumbotron" ng-if="slide.title">
-                        <h1>BRAVE
-                            <br>NEW
-                            <br>WORK</h1>
-                    </div>
+                <div class="jumbotron" ng-if="slide.title">
+                    <h1>BRAVE
+                        <br>NEW
+                        <br>WORK</h1>
+                </div>
 
-                    <media-link url="slide.underground.url" index="$index" ng-if="slide.instructions">
+                <media-link url="slide.underground.url" index="$index" ng-if="slide.instructions">
 
-                        <p class="text-muted">{{slide.instructions}}</p>
+                    <p class="text-muted">{{slide.instructions}}</p>
 
-                        <p>
-                            <span class="text-muted glyphicon glyphicon-chevron-up"></span>
-                        </p>
-                    </media-link>
+                    <p>
+                        <span class="text-muted glyphicon glyphicon-chevron-up"></span>
+                    </p>
+                </media-link>
 
-                    <div class="audio-wrapper" ng-if="slide.audio" ng-controller="AudioCtrl" ng-hide="{{!!slide.maps}}">
-                        <!--  <iframe id="sc-widget" class="hide" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153552958%3Fsecret_token%3Ds-mjI3O&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false" width="100%" height="465" scrolling="no" frameborder="no"></iframe> -->
+                <div class="audio-wrapper" ng-if="slide.audio" ng-controller="AudioCtrl" ng-hide="{{!!slide.maps}}">
+                    <!--  <iframe id="sc-widget" class="hide" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153552958%3Fsecret_token%3Ds-mjI3O&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false" width="100%" height="465" scrolling="no" frameborder="no"></iframe> -->
 
-                        <button type="button" class="btn btn-play btn-lg" ng-model="playing" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
-                            <span class="glyphicon glyphicon-play" ng-hide="audioPlayer.playing"></span>
-                            <span class="glyphicon glyphicon-pause" ng-show="audioPlayer.playing"></span>
-                        </button>
-                    </div>
+                    <button type="button" class="btn btn-play btn-lg" ng-model="playing" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+                        <span class="glyphicon glyphicon-play" ng-hide="audioPlayer.playing"></span>
+                        <span class="glyphicon glyphicon-pause" ng-show="audioPlayer.playing"></span>
+                    </button>
+                </div>
 
-                    <img id="media-content-{{$index}}" class="media-content-image" ng-src="{{slide.image}}" style="margin:auto;" ng-if="slide.image">
+                <img id="media-content-{{$index}}" class="media-content-image" ng-src="{{slide.image}}" style="margin:auto;" ng-if="slide.image">
 
 
+                <div class="maps-wrapper" ng-if="slide.maps" fit-vids custom-selector="google-map" ng-controller="MapCtrl">
 
-                    <div class="maps-wrapper" ng-if="slide.maps" fit-vids custom-selector="google-map" ng-controller="MapCtrl">
+                    <google-map center="map.center" zoom="map.zoom" options="map.options">
+                        <layer type="KmlLayer" options="kmlLayerOptions"></layer>
+                        <marker coords="map.currentPosition" fit="true" options="map.currentMarkerOptions"></marker>
+                    </google-map>
+                </div>
 
-                        <google-map center="map.center" zoom="map.zoom" options="map.options">
-                            <layer type="KmlLayer" options="kmlLayerOptions"></layer>
-                            <marker coords="map.currentPosition" fit="true" options="map.currentMarkerOptions"></marker>
-                        </google-map>
-                    </div>
-                    <!-- <a href="#slide-scroll-top-{{$index}}" du-scrollspy><span class="glyphicon glyphicon-chevron-up"></span></a> -->
-                    <!-- <bnw-video-player index="$index" ng-if="slide.video" id="media-content-{{$index}}"> -->
+                <!-- <bnw-video-player index="$index" ng-if="slide.video" id="media-content-{{$index}}"> -->
 
-                    <!--    <button class="btn-video-play">
+                <!--    <button class="btn-video-play">
                         <img src="/images/kaffee-kochen.jpg">
                         <div class="video-icon">
                             <span class="glyphicon glyphicon-facetime-video" ng-hide="playing || loading"></span>
@@ -66,19 +61,14 @@
                             <source src="/audio/01-kaffeekochen-small.mp4">
                         </video>
                     </div> -->
-                    <!-- <div class="video-wrapper" fit-vids ng-if="slide.video" ng-controller="VideoCtrl">
+                <div class="video-wrapper" fit-vids ng-if="slide.video" ng-controller="VideoCtrl">
                     <!-- <iframe src="//player.vimeo.com/video/97737063?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="1280" height="719" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 
-                    <!-- <iframe id="ytplayer" width="1280" height="800" type="text/html" src="http://www.youtube.com/embed/PFVcfyqm9_Y?modestbranding=1&rel=0&controls=0&autoplay=0&playsinline=1&showinfo=0&origin=http://example.com" frameborder="0" allowfullscreen/>
-              </div> -->
-                    <!-- </bnw-video-player> -->
-
-
+                    <iframe id="ytplayer" width="1280" height="800" type="text/html" src="http://www.youtube.com/embed/PFVcfyqm9_Y?modestbranding=1&rel=0&controls=0&autoplay=0&playsinline=1&showinfo=0&origin=http://example.com" frameborder="0" allowfullscreen></iframe>
                 </div>
-            </bnw-scroll>
-        </div>
-    </bnw-slick>
-
-
-
+                <a href="#slide-scroll-top-{{$index}}" data-slide-id="{{slide.id}}" du-scrollspy></a>
+                <!-- </bnw-video-player>-->
+            </div>
+        </bnw-scroll>
+    </div>
 </div>
