--- a/app/views/home.html
+++ b/app/views/home.html
@@ -24,7 +24,7 @@
                     </p>
                 </media-link>
 
-                <div class="audio-wrapper" ng-if="slide.audio" ng-controller="AudioCtrl" ng-hide="{{!!slide.maps}}">
+                <div class="audio-wrapper" ng-if="slide.audio" ng-controller="AudioCtrl" ng-hide="slide.autoplay">
                     <!--  <iframe id="sc-widget" class="hide" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153552958%3Fsecret_token%3Ds-mjI3O&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false" width="100%" height="465" scrolling="no" frameborder="no"></iframe> -->
 
                     <button type="button" class="btn btn-play btn-lg" ng-model="playing" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
