[++] cleanup + click handling for audio improved

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -96,11 +96,11 @@ bnw-scroll {
 
   // user-select: none;
 }
-.spinner {
-  background: url(../images/ajax-loader.gif) no-repeat top left;
-  width: 66px;
-  height: 66px;
-}
+// .spinner {
+//   background: url(../images/ajax-loader.gif) no-repeat top left;
+//   width: 66px;
+//   height: 66px;
+// }
 
 // Custom default button
 .btn-default,
