--- a/app/views/home.html
+++ b/app/views/home.html
@@ -12,22 +12,18 @@
                 <div class="jumbotron" ng-if="slide.title">
                     <h1>BRAVE
                         <br>NEW
-                        <br>WORK</h1>
+                        <br>WORK</h1><!-- HARDCODED, as I didn't figure out how to unescape HTML, maybe we render markdown here through a filter-->
                 </div>
 
-                <media-link url="slide.underground.url" index="$index" ng-if="slide.instructions">
-
-                    <p class="text-muted">{{slide.instructions}}</p>
-
-                    <p>
-                        <span class="text-muted glyphicon glyphicon-chevron-up"></span>
-                    </p>
-                </media-link>
+                <div class="slide-instructions" ng-if="slide-instructions">
+                  <p class="text-muted">{{slide.instructions}}</p>
+                </div>
 
                 <div class="audio-wrapper" ng-if="slide.audio" ng-controller="AudioCtrl" ng-hide="slide.autoplay">
                     <!--  <iframe id="sc-widget" class="hide" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/153552958%3Fsecret_token%3Ds-mjI3O&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false" width="100%" height="465" scrolling="no" frameborder="no"></iframe> -->
-
+                    <div  us-spinner="{radius: 25, width: 20, length:10}" spinner-key="audio-spinner" spinner-start-active="1"></div>
                     <button type="button" class="btn btn-play btn-lg" ng-model="playing" btn-checkbox btn-checkbox-true="1" btn-checkbox-false="0">
+
                         <span class="glyphicon glyphicon-play" ng-hide="audioPlayer.playing"></span>
                         <span class="glyphicon glyphicon-pause" ng-show="audioPlayer.playing"></span>
                     </button>
