--- a/app/views/home.html
+++ b/app/views/home.html
@@ -65,12 +65,12 @@
                 <!-- </bnw-video-player>-->
             </div>
 
-             
+
 
 
             <ul class="pager">
-              <li class="previous" ng-if="prevSlideId"><a ng-click="prevSlide(slide.id)"><span class="glyphicon glyphicon-chevron-left"> </span></a></li>
-              <li class="next" ng-if="nextSlideId"><a ng-click="nextSlide(slide.id)"><span class="glyphicon glyphicon-chevron-right"> </span></a></li>
+              <li class="previous" ng-if="prevSlideId"><a href="/#/{{prevSlideId}}"><span class="glyphicon glyphicon-chevron-left"> </span></a></li>
+              <li class="next" ng-if="nextSlideId"><a href="/#/{{nextSlideId}}"><span class="glyphicon glyphicon-chevron-right"> </span></a></li>
             </ul>
 
 
